common/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/instance: forgejo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/instance: forgejo
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:14.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          # resources:
          #   requests:
          #     cpu: 50m
          #     memory: 128Mi
          #   limits:
          #     cpu: 2000m
          #     memory: 2Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
